tests/paczka1/fuzzy1/89896990.err
Error in line 2: m9Cf2W09saG A16s 69,6
Error in line 19: A163 A725 27,0
Error in line 12: wnxb5Avr A725 442,2
